[gd_scene load_steps=13 format=3 uid="uid://lkggoymqyg0a"]

[ext_resource type="PackedScene" uid="uid://cclltl1a7vf46" path="res://scene/player/player.tscn" id="1_v0l8b"]
[ext_resource type="Script" uid="uid://c35csi1f0iubw" path="res://scene/main/main.gd" id="1_wp4xf"]
[ext_resource type="PackedScene" uid="uid://64fyupj5d5i4" path="res://scene/meteor/meteor.tscn" id="3_4j5ol"]
[ext_resource type="PackedScene" uid="uid://ywhv7kjoc3xk" path="res://scene/enemy/enemy.tscn" id="3_brvut"]
[ext_resource type="PackedScene" uid="uid://ea0qclyccpgr" path="res://scene/wall1/wall1.tscn" id="4_4j5ol"]
[ext_resource type="PackedScene" uid="uid://cw1go0qsa0x2l" path="res://scene/hud/hud.tscn" id="5_0ha60"]
[ext_resource type="PackedScene" uid="uid://cgcta23e1ahqs" path="res://scene/boss1/boss1.tscn" id="5_p1hux"]
[ext_resource type="PackedScene" uid="uid://cw3sqy23kx6mf" path="res://scene/rocket/rocket.tscn" id="8_of57s"]
[ext_resource type="PackedScene" uid="uid://bh380yv2x1qld" path="res://scene/boosts/health/restoration_of_health.tscn" id="9_si3g0"]
[ext_resource type="PackedScene" uid="uid://cdjajhkhs6rtb" path="res://scene/boosts/damage/strong_bullet/boost_damage.tscn" id="10_pidc3"]
[ext_resource type="PackedScene" uid="uid://c43rdc0wq7t0" path="res://scene/boosts/damage/double_bullet/double_bullet.tscn" id="11_snrr3"]

[sub_resource type="Curve2D" id="Curve2D_brvut"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 720, 0)
}
point_count = 2

[node name="Main" type="Node"]
script = ExtResource("1_wp4xf")
all_enemy_scenes = Array[PackedScene]([ExtResource("3_4j5ol"), ExtResource("8_of57s"), ExtResource("3_brvut"), ExtResource("4_4j5ol")])
boss_enemies = Array[PackedScene]([ExtResource("5_p1hux"), ExtResource("5_p1hux"), ExtResource("5_p1hux")])
all_boost_scenes = Array[PackedScene]([ExtResource("11_snrr3"), ExtResource("10_pidc3"), ExtResource("9_si3g0")])

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.19215687, 0.07450981, 0.23137255, 1)

[node name="Player" parent="." instance=ExtResource("1_v0l8b")]
position = Vector2(-378.99994, 381)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BoostTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(360, 800)

[node name="HUD" parent="." instance=ExtResource("5_0ha60")]

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_brvut")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="RestorationOfHealth" parent="." instance=ExtResource("9_si3g0")]
position = Vector2(329, 105)

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="BoostTimer" to="." method="_on_boost_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
